# simple_ls_and_grep_clones

./: Cargo.toml  Makefile  READme.md  a.out  main.c  makeileexample  test
src/: cat.rs  echo.rs  grep.rs  grep_help.txt  hosts  ls.rs  ls_help.txt  main.c  main.rs  test.c  text.txt
src/ff/: daz  dd  dza
src/ff/faa/: azdaz
