[package]
name = "cmd_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grep"
path = "src/grep.rs"

#[[bin]]
#name = "ls"
#path = "src/ls.rs"
#
#[[bin]]
#name = "cat"
#path = "src/cat.rs"

[dependencies]
clap = { version = "4.2.1", features = ["derive"]  }
