[package]
name = "cmd_tools"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com"
repository = "https://github.com"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grep_clone"
path = "src/grep.rs"

[[bin]]
name = "ls_clone"
path = "src/ls.rs"

[[bin]]
name = "cat_clone"
path = "src/cat.rs"

[[bin]]
name = "echo_clone"
path = "src/echo.rs"

#[[bin]]
#name = "ls"
#path = "src/ls.rs"
#
#[[bin]]
#name = "cat"
#path = "src/cat.rs"

[dependencies]
clap = { version = "4.2.1", features = ["derive"]  }
chrono = "0.4.24"
num-traits = '0.2.15'